# src/main/kotlin/com/wutsi/platform/account/dto/BusinessHour.kt
@@ -1,0 +1,12 @@
+package com.wutsi.platform.account.dto
+
+import kotlin.Boolean
+import kotlin.Int
+import kotlin.String
+
+public data class BusinessHour(
+    public val dayOfWeek: Int = 0,
+    public val opened: Boolean = false,
+    public val openTime: String? = null,
+    public val closeTime: String? = null
+)
