# src/main/kotlin/com/wutsi/platform/account/dto/ListBusinessHourResponse.kt
@@ -1,0 +1,7 @@
+package com.wutsi.platform.account.dto
+
+import kotlin.collections.List
+
+public data class ListBusinessHourResponse(
+    public val businessHours: List<BusinessHour> = emptyList()
+)
